# jobOnjaBot

./: .env.sample  .gitignore  bot.py  botConfig.py  config.py  crawlRepo.py  jobinja.py  login.py  main.py  pyproject.toml  requirements.txt
prisma/: partial_types.py  schema.prisma
src/_core/: __init__.py  database.py  logging.py  schemas.py  utils.py
src/configs/: __init__.py
src/crawlers/: _base.py  jobinja.py
src/seeds/: job_platform_seed.py
src/services/: company_services.py  job_platform_services.py  job_services.py
