[project]
name = "jobonjabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "mechanize>=0.4.10",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
]
